--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <div class="container" style="text-align: center;">
-    <h1>BMW in your country</h1>
+    <h1>BMW IN YOUR COUNTRY</h1>
     <h3>ALL BMW MODELS</h3> 
     <h4>Find your BMW </h4>
  </div> 
