--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="col"> offers</div>
         </div>
     </div>
-    <div class="container">
+    <br> <br> <div class="container">
         <h1 style="text-align: center;">DISCOVER  BMW</h1>
         <img src="img12.jfif" class="img-fluid" alt=""> <br> <br>
         <h3 style="text-align: center;">BMW SAFETY: PREPARED TO PROTECT</h3>
