--- a/contactus.html
+++ b/contactus.html
@@ -26,8 +26,8 @@
         <div class="col"><a href="http://connect.facebook.com/"><img src="facebook.png" width="110px" height="110px" alt=""></a></div>
         </div> <br>
         <div class="row">
-        <div class="col">johnshady1000@gmail</div>
-        <div class="col">08062609193 or 09066735489</div>
+        <div class="col">johnshady1000@gmail.com</div>
+        <div class="col">08062609193 or 09066735489</div> 
         <div class="col"></div>
         </div>
        <br> <a href="index.html" class="btn btn-warning">homepage</a>
