--- a/contactus.html
+++ b/contactus.html
@@ -28,7 +28,7 @@
         <div class="row">
         <div class="col">johnshady1000@gmail.com</div>
         <div class="col">08062609193 or 09066735489</div> 
-        <div class="col"></div>
+        <div class="col">facebook.com</div>
         </div>
        <br> <a href="index.html" class="btn btn-warning">homepage</a>
     </div>
